# python-uv-template

./: .pre-commit-config.yaml  LICENSE  bad.py  code.py  pyproject.toml  run.py
.github/workflows/: lint.yml
